updated to include S3 uploads

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -7,6 +7,10 @@
 <body>
   <h1>Welcome to my awesome App!</h1>
   <a th:href="@{${projectUrl}}">Projects</a>
+  <ul>
+    <li th:each="project : ${projects}" 
+        th:text="${project.name}"></li>
+  </ul>
 
 </body>
 </html>
